--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1401963838" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1401968609" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401963838" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401963838" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401968609" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401968609" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -284,10 +284,9 @@
               </a>
             </div>
           </div>
-          <div class="content-item medium invitation">
+          <div class="content-item large invitation">
             <h3>
-              <img src="../../images/favicon_32x32.jpg" />
-              Kutsu muita osallistumaan
+              <img src="../../images/favicon_32x32.jpg" />Kutsu muita osallistumaan
             </h3>
             <div class="helper-container">
               <span class="icon-help" title="lisää käyttäjänimiä tai sähköpostiosoitteita" placement="top">Kenelle</span>
@@ -543,7 +542,7 @@
               </tbody>
             </table>
           </div>
-          <div class="content-item medium keywords">
+          <div class="content-item large keywords">
             <div class="helper-container">
               <span class="icon-help h4" title="Lorem ipsum" placement="top">Asiasanat</span>
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
@@ -556,7 +555,7 @@
               <li>Esimerkki</li>
             </ul>
           </div>
-          <div class="content-item medium locations">
+          <div class="content-item large locations">
             <div class="helper-container">
               <span class="icon-help h4" title="Lorem ipsum" placement="top">Paikkakunnat</span>
               <p class="helper-text small is-vishidden">Lorem ipsum</p>
@@ -568,7 +567,7 @@
               <li>Tampere</li>
             </ul>
           </div>
-          <div class="content-item medium project-analysis">
+          <div class="content-item large project-analysis">
             <h2>
               Yhteenveto
             </h2>
@@ -831,10 +830,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1401963838">
+	<script id="pl-js-polyfill-insert-1401968609">
 		(function() {
 			if (self != top) {
-				var cb = '1401963838';
+				var cb = '1401968609';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -843,10 +842,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1401963838">
+	<script id="pl-js-insert-1401968609">
 		(function() {
 			if (self != top) {
-				var cb = '1401963838';
+				var cb = '1401968609';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
